<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content">

	<TableRow>
		<TextView android:text="@string/nameD_point_dialog"
				  android:layout_width="wrap_content" 
				  android:layout_height="wrap_content" />

		<EditText android:id="@+id/name_point_dialog"
				  android:layout_width="wrap_content" 
				  android:layout_height="wrap_content" />
	</TableRow>

	<TableRow>
		<TextView android:text="@string/address_describe"
				  android:layout_width="wrap_content" 
				  android:layout_height="wrap_content" />

		<EditText android:id="@+id/adres_point_dialog"
				  android:layout_width="wrap_content" 
				  android:layout_height="wrap_content" />
	</TableRow>

	<TableRow>
		<TextView android:text="@string/city_describe"
				  android:layout_width="wrap_content" 
				  android:layout_height="wrap_content" />

		<EditText android:id="@+id/city_point_dialog"
				  android:layout_width="wrap_content" 
				  android:layout_height="wrap_content" />
	</TableRow>

	<TableRow>
		<TextView android:text="@string/country_describe"
				  android:layout_width="wrap_content" 
				  android:layout_height="wrap_content" />

		<EditText android:id="@+id/country_point_dialog"
				  android:layout_width="wrap_content" 
				  android:layout_height="wrap_content" />
	</TableRow>

</TableLayout>
